--- a/configs/model_v1.yaml
+++ b/configs/model_v1.yaml
@@ -1,26 +1,39 @@
 model:
+  type: basic # 'basic' for Predictor, 'improved' for ImprovedPredictor
   input_dim: 28
   hidden_dims: [256, 128, 64]
   dropout_rate: 0.4
   activation: swish
+  use_batch_norm: true
   use_residual: true
+
 training:
   epochs: 100
   lr: 0.001
-  loss_type: focal
-  alpha: 0.25
+  loss_type: focal # 'bce', 'weighted_bce', 'focal'
+  alpha: 0.25 # For focal/weighted
   gamma: 2.0
   optimizer_name: Adam
   weight_decay: 0.0
   patience: 10
   min_delta: 0.0001
   use_class_weights: true
+  use_scheduler: false
+  scheduler_type: cosine # If true
+  batch_size: 32
+
+tuning: # Optional section for hypertuning
+  enabled: false # Set to true to run tuning
+  lr_range: [0.0001, 0.001, 0.01]
+  hidden_dims_options: [[128], [256, 128], [512, 256, 128]]
+  dropout_range: [0.3, 0.4, 0.5]
+
 preprocessing:
   save_dir: "experiments/preprocessing/artifacts"
+
 data:
-  batch_size: 32
-filepath:
-  train: "bank_loans_train_processed.xlsx"
-  val: "bank_loans_val_processed.xlsx"
-  test: "bank_loans_test_processed.xlsx"
-  state: "preprocessor_state.json"
+  filepath:
+    train: "bank_loans_train_processed.xlsx"
+    val: "bank_loans_val_processed.xlsx"
+    test: "bank_loans_test_processed.xlsx"
+    state: "preprocessor_state.json"
