--- a/configs/model_v1.yaml
+++ b/configs/model_v1.yaml
@@ -3,7 +3,7 @@ model: # Model architecture
   input_dim: 28
   hidden_dims: [256, 128, 64]
   dropout_rate: 0.4
-  activation: swish
+  activation: relu # relu, gelu, leaky_relu, swish
   use_batch_norm: true
   use_residual: true
 
@@ -13,7 +13,7 @@ training: # Training parameters
   loss_type: bce # 'bce', 'weighted_bce', 'focal'
   alpha: 0.25 # For focal/weighted
   gamma: 2.0
-  optimizer_name: Adam
+  optimizer_name: Adam # Adam, AdamW
   weight_decay: 0.0
   patience: 5
   min_delta: 0.0001
