--- a/configs/model_v1.yaml
+++ b/configs/model_v1.yaml
@@ -29,15 +29,18 @@ tuning: # grid search
   dropout_range: [0.2, 0.3, 0.4, 0.5]
 
 preprocessing:
-  save_dir: "experiments/preprocessing/artifacts"
+  save_dir: experiments/preprocessing/artifacts
 
 inference:
-  decision_threshold: 0.1
+  cost_false_positives: 10
+  cost_false_negatives: 25
+  benefit_true_positives: 20
+  decision_threshold: 0.3599999999999999
 
 data:
   filepath:
-    state: "experiments/preprocessing/artifacts/preprocessor_state.json"
-    train: "experiments/preprocessing/artifacts/titanic_train_processed.xlsx"
-    val: "experiments/preprocessing/artifacts/titanic_val_processed.xlsx"
-    test: "experiments/preprocessing/artifacts/titanic_test_processed.xlsx"
-  target_column: "Survived"
+    state: experiments/preprocessing/artifacts/preprocessor_state.json
+    train: experiments/preprocessing/artifacts/titanic_train_processed.xlsx
+    val: experiments/preprocessing/artifacts/titanic_val_processed.xlsx
+    test: experiments/preprocessing/artifacts/titanic_test_processed.xlsx
+  target_column: Survived
