--- a/configs/model_v1.yaml
+++ b/configs/model_v1.yaml
@@ -17,7 +17,7 @@ training: # Training parameters
   weight_decay: 0.0
   patience: 10
   min_delta: 0.0001
-  use_class_weights: true
+  use_class_weights: false
   use_scheduler: false
   scheduler_type: cosine # If true
   batch_size: 32
