--- a/configs/model_v2.yaml
+++ b/configs/model_v2.yaml
@@ -2,15 +2,15 @@ model: # Model architecture
   type: basic # 'basic' for Predictor, 'improved' for ImprovedPredictor
   input_dim: 28
   hidden_dims: [256, 128, 64]
-  dropout_rate: 0.4
-  activation: swish # relu, gelu, leaky_relu, swish
+  dropout_rate: 0.3
+  activation: relu # relu, gelu, leaky_relu, swish
   use_batch_norm: true
-  use_residual: true
+  use_residual: false
 
 training: # Training parameters
-  epochs: 100
+  epochs: 50
   lr: 0.001
-  loss_type: focal # 'bce', 'weighted_bce', 'focal'
+  loss_type: bce # 'bce', 'weighted_bce', 'focal'
   alpha: 0.25 # For focal/weighted
   gamma: 2.0
   optimizer_name: Adam # Adam, AdamW
@@ -23,23 +23,24 @@ training: # Training parameters
   batch_size: 32
 
 tuning: # grid search
-  enabled: true # Set to true to run tuning
+  enabled: false # Set to true to run tuning
   lr_range: [0.0005, 0.001, 0.005, 0.01]
   hidden_dims_options: [[128], [256, 128], [512, 256, 128]]
   dropout_range: [0.2, 0.3, 0.4, 0.5]
 
 preprocessing:
-  save_dir: "experiments/preprocessing/artifacts"
+  save_dir: experiments/preprocessing/artifacts
 
 inference:
   cost_false_positives: 10
   cost_false_negatives: 25
   benefit_true_positives: 20
+  decision_threshold: 0.2599999999999999
 
 data:
   filepath:
-    state: "experiments/preprocessing/artifacts/preprocessor_state.json"
-    train: "experiments/preprocessing/artifacts/titanic_train_processed.xlsx"
-    val: "experiments/preprocessing/artifacts/titanic_val_processed.xlsx"
-    test: "experiments/preprocessing/debug_splits/raw_test.xlsx"
-  target_column: "Survived"
+    state: experiments/preprocessing/artifacts/preprocessor_state.json
+    train: experiments/preprocessing/artifacts/titanic_train_processed.xlsx
+    val: experiments/preprocessing/artifacts/titanic_val_processed.xlsx
+    test: experiments/preprocessing/artifacts/titanic_test_processed.xlsx
+  target_column: Survived
