--- a/configs/model_v4.yaml
+++ b/configs/model_v4.yaml
@@ -8,6 +8,7 @@ model: # Model architecture
   use_residual: false # logistic regression doesn’t use
 
 training: # Training parameters
+  run_name: "sydney"
   epochs: 50
   lr: 0.0001
   loss_type: bce # 'bce', 'weighted_bce', 'focal'
