--- a/configs/model_v1.yaml
+++ b/configs/model_v1.yaml
@@ -7,6 +7,32 @@ model: # Model architecture
   use_batch_norm: true
   use_residual: false
 
+  # Shared defaults for any tree-based model
+  tree_params:
+    random_state: 42
+    n_jobs: -1
+
+  # Random Forest–specific
+  rf_params:
+  n_estimators: 400
+  max_depth: 10
+  min_samples_split: 2
+  min_samples_leaf: 1
+  class_weight: balanced # e.g. "balanced", null
+  criterion: gini
+
+  # XGBoost–specific
+  xgb_params:
+    n_estimators: 600
+    learning_rate: 0.05
+    max_depth: 6
+    subsample: 0.8
+    colsample_bytree: 0.8
+    reg_lambda: 1.0
+    scale_pos_weight: null # can auto-fill at runtime
+    tree_method: "hist" # good default
+    eval_metric: "logloss"
+
 training: # Training parameters
   run_name: tokyo
   epochs: 25
@@ -28,28 +54,6 @@ tuning: # grid search
   lr_range: [0.0005, 0.001, 0.005, 0.01]
   hidden_dims_options: [[128], [256, 128], [512, 256, 128]]
   dropout_range: [0.2, 0.3, 0.4, 0.5]
-
-tree_params: # NEW: common pattern—optional section
-  random_state: 42 # shared default
-
-rf_params: # NEW: passed to RandomForestClassifier(**rf_params)
-  n_estimators: 400
-  max_depth: null
-  min_samples_split: 2
-  min_samples_leaf: 1
-  class_weight: null # e.g. "balanced"
-  n_jobs: -1
-
-xgb_params: # NEW: passed to XGBClassifier(**xgb_params)
-  n_estimators: 600
-  learning_rate: 0.05
-  max_depth: 6
-  subsample: 0.9
-  colsample_bytree: 0.9
-  reg_lambda: 1.0
-  tree_method: "hist" # good default
-  n_jobs: -1
-  eval_metric: "logloss"
 
 preprocessing:
   save_dir: experiments/preprocessing/artifacts
