--- a/configs/model_tree_v1.yaml
+++ b/configs/model_tree_v1.yaml
@@ -1,5 +1,5 @@
 model: # Model architecture
-  type: basic # basic,improved, logistic, rf, xgb
+  type: rf # basic,improved, logistic, rf, xgb
   input_dim: 14
   hidden_dims: [64]
   dropout_rate: 0.7
@@ -60,6 +60,9 @@ tuning: # grid search
   min_samples_split_range: [2, 5, 10]
   min_samples_leaf_range: [1, 2, 4]
   subsample_range: [0.6, 0.8, 1.0]
+  criterion: "gini" # "gini", "entropy"
+  # xgb
+  colsample_bytree: 0
 
 preprocessing:
   save_dir: experiments/preprocessing/artifacts
