--- a/configs/model_tree_v1.yaml
+++ b/configs/model_tree_v1.yaml
@@ -50,16 +50,17 @@ training: # Training parameters
   batch_size: 32
 
 tuning: # grid search
-  enabled: false # Set to true to run tuning
+  enabled: true # Set to true to run tuning
   lr_range: [0.0005, 0.001, 0.005, 0.01]
   hidden_dims_options: [[128], [256, 128], [512, 256, 128]]
   dropout_range: [0.2, 0.3, 0.4, 0.5]
   # These are tree-based params
-  n_estimators_range: [100, 200, 400]
-  max_depth_range: [5, 10, 20, null]
-  min_samples_split_range: [2, 5, 10]
-  min_samples_leaf_range: [1, 2, 4]
-  subsample_range: [0.6, 0.8, 1.0]
+  n_estimators_range: [200, 400, 600]
+  max_depth_range: [8, 10, 12, None]
+  min_samples_split_range: [2, 5]
+  min_samples_leaf_range: [1, 2]
+  calibrate: true
+  # subsample_range: [0.6, 0.8, 1.0]
   criterion: "gini" # "gini", "entropy"
   # xgb
   colsample_bytree: 0
