--- a/configs/model_tree_v1.yaml
+++ b/configs/model_tree_v1.yaml
@@ -56,7 +56,7 @@ tuning: # grid search
   dropout_range: [0.2, 0.3, 0.4, 0.5]
   # These are tree-based params
   n_estimators_range: [200, 400, 600]
-  max_depth_range: [8, 10, 12, None]
+  max_depth_range: [8, 10, 12, null]
   min_samples_split_range: [2, 5]
   min_samples_leaf_range: [1, 2]
   calibrate: true
