--- a/configs/pipeline_v1.yaml
+++ b/configs/pipeline_v1.yaml
@@ -1,7 +1,7 @@
-# file_path: "datasets/bank_loans.xlsx"
-# target_column: "personal_loan"
-file_path: "datasets/titanic.xlsx"
-target_column: "Survived"
+file_path: "datasets/bank_loans.xlsx"
+target_column: "personal_loan"
+#file_path: "datasets/titanic.xlsx"
+#target_column: "Survived"
 drop_columns: ["PassengerId", "Name"]
 splits:
   test_size: 0.2
