--- a/configs/model_tree_v2.yaml
+++ b/configs/model_tree_v2.yaml
@@ -30,7 +30,7 @@ model: # Model architecture
     colsample_bytree: 0.8
     reg_lambda: 1.0
     scale_pos_weight: null # can auto-fill at runtime
-    tree_method: "hist" # good default
+    tree_method: "hist" # Required for categorical support
     eval_metric: "logloss"
 
 training: # Training parameters
@@ -66,6 +66,7 @@ tuning: # grid search
   colsample_bytree: 0
 
 preprocessing:
+  apply_scaling: true # Set to false for tree models
   save_dir: experiments/preprocessing/artifacts
 
 inference:
