--- a/configs/model_tree_v3.yaml
+++ b/configs/model_tree_v3.yaml
@@ -1,5 +1,5 @@
 model: # Model architecture
-  type: rf # nn_basic,nn_improved, logistic, rf, xgb
+  type: xgb # nn_basic,nn_improved, logistic, rf, xgb
   input_dim: auto # Detect dynamically
   hidden_dims: [64]
   dropout_rate: 0.7
@@ -51,17 +51,17 @@ training: # Training parameters
   batch_size: 32
 
 tuning: # grid search
-  enabled: false # Set to true to run tuning
-  lr_range: [0.0005, 0.001, 0.005, 0.01]
+  enabled: true # Set to true to run tuning
+  lr_range: [0.01, 0.03, 0.05]
   hidden_dims_options: [[128], [256, 128], [512, 256, 128]]
   dropout_range: [0.2, 0.3, 0.4, 0.5]
   # These are tree-based params
   n_estimators_range: [200, 400, 600]
-  max_depth_range: [8, 10, 12, null]
+  max_depth_range: [4, 6, 8, 10]
   min_samples_split_range: [2, 5]
   min_samples_leaf_range: [1, 2]
   calibrate: true
-  # subsample_range: [0.6, 0.8, 1.0]
+  subsample_range: [0.7, 0.8, 0.9]
   criterion: "gini" # "gini", "entropy"
   # xgb
   colsample_bytree: 0
