--- a/configs/model_tree_v2.yaml
+++ b/configs/model_tree_v2.yaml
@@ -34,6 +34,7 @@ model: # Model architecture
     eval_metric: "logloss"
 
 training: # Training parameters
+  experiment_name: MyProj
   run_name: heredia
   epochs: 25
   lr: 0.02
